[Feat(김유진(유자)): 홈 화면 조회 API]